default/objects/Credit_Factory_Calculation__c/Credit_Factory_Calculation__c.object-meta.xml
<CustomObject>
    <label>Credit Factory Calculation</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Credit Factory Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Factory Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>