default/objects/Credit_Factory_Calculation__c/fields/Date_of_Foundation_month__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Foundation_month__c</fullName>
    <label>Date of Foundation (month)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>