default/objects/Credit_Factory_Calculation__c/fields/Deposit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Reason__c</fullName>
    <label>Deposit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New business</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 0)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 1)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 2)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 3)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 4)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 5)</fullName>
            </value>
            <value>
                <fullName>Low credit rating (rating 6)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>