default/objects/Credit_Factory_Calculation__c/fields/High_Risk__c.field-meta.xml
<CustomField>
    <fullName>High_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Risk</label>
    <type>Checkbox</type>
</CustomField>