default/objects/Credit_Factory_Calculation__c/fields/New_Business_Exception__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Business Exception</label>
    <type>Checkbox</type>
</CustomField>