default/objects/Credit_Factory_Calculation__c/fields/Number_of_Cards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cards__c</fullName>
    <label>Number of Cards</label>
    <length>10</length>
    <type>Text</type>
</CustomField>