default/objects/Credit_Factory_Calculation__c/fields/Payment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Payment_Detail__c</fullName>
    <label>Payment Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7+7</fullName>
            </value>
            <value>
                <fullName>15+7</fullName>
            </value>
            <value>
                <fullName>15+14</fullName>
            </value>
            <value>
                <fullName>30+7</fullName>
            </value>
            <value>
                <fullName>30+14</fullName>
            </value>
            <value>
                <fullName>30+27</fullName>
            </value>
            <value>
                <fullName>*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>