default/objects/Credit_Factory_Calculation__c/fields/Security_Level__c.field-meta.xml
<CustomField>
    <fullName>Security_Level__c</fullName>
    <label>Security Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>