default/objects/Credit_Factory_Calculation__c/fields/Total_Consumption_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumption_Max_Value__c</fullName>
    <label>Total Consumption Max Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>