default/objects/Credit_Factory_Calculation__c/listViews/New_Business_Exception.listView-meta.xml
<ListView>
    <fullName>New_Business_Exception</fullName>
    <columns>Order__c</columns>
    <columns>Country__c</columns>
    <columns>Class_Rating__c</columns>
    <columns>Date_of_Foundation_month__c</columns>
    <columns>Number_of_Cards__c</columns>
    <columns>Total_Consumption_Min_Value__c</columns>
    <columns>Total_Consumption_Max_Value__c</columns>
    <columns>Security_Level__c</columns>
    <columns>Payment_Detail__c</columns>
    <filterScope>Mine</filterScope>
    <label>New Business Exception</label>
    <language>en_US</language>
</ListView>